# lasso-regression

./: .gitignore  README.md  justfile  lasso-regression.ipynb  main.py  pyproject.toml  requirements.txt
courselib/: __init__.py  optimizer.py
courselib/data/: __init__.py
courselib/models/: base.py  compressive.py
courselib/utils/: __init__.py
regression/: __init__.py  data.py  optimizer.py
report/: report.tex
